# 3D-Render-from-Scratch

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  Settings.h  clang-format.txt  main.cpp
ExampleApplication/: Application.cpp  Application.h  CMakeLists.txt  Except.h  Scenes.cpp  Scenes.h  main.cpp
Renderer3D/: CMakeLists.txt  Camera.cpp  Camera.h  FrameMovement.cpp  FrameMovement.h  Geometry.h  HVertex.cpp  HVertex.h  RenderObject.cpp  RenderObject.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  TextureCoords.h  Utils.h  Vertex.h  VertexAttributes.h
docs/: class-diagram.puml
src/: application.cpp  application.h  camera.cpp  camera.h  container2d.h  except.h  frame_movement.cpp  frame_movement.h  geometry.cpp  geometry.h  hvertex.cpp  hvertex.h  object.cpp  object.h  renderer.cpp  renderer.h  scenes.cpp  scenes.h  settings.h  texture_coords.h  textures.h  utils.h  vertex.h  vertex_attributes.h  world.cpp  world.h
